Version 39, 12 March 2022
---------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* Fixed issue that could cause unwanted border to be added to velo.
* Fixed issue where the velo text could jump a tiny bit when the first number changes.
* Added option to disable audio processing that may increase performance in some circumstances.
* Fixed issue where startmovie usage did not show.

Version 38, 2 February 2022
---------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* CSGO now uses a new method for capturing player velo.

Version 37, 12 December 2021
--------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* Fixed crash in movement games if velo was not enabled and pattern was outdated.
* Added logging information if a pattern is outdated.
* Updated patterns for CSGO build 7866056.
* Added start parameter -svrnoautostop that can be used to disable recording autostop when getting back to the menu. This feature allows you to record multiple demos after each other without the main menu being captured.

Version 36, 17 October 2021
--------------------------

Supported games in this release:
* Counter-Strike: Source
* Counter-Strike: Global Offensive
* Team Fortress 2
* Zombie Panic! Source
* Half-Life 2
* Source 2013 mods
* Black Mesa

* Fixed INI and VDF parsing skipping the last line if the file ended without a trailing newline (svr_launch_params.ini mostly).
* Velo overlay is now restricted to the movement based games CSS, TF2 and CSGO. This is done to increase reach for other games that only want capture.